framework/default/ortoo-core/default/objects/Process_Deactivation__c/Process_Deactivation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides the ability to selectively deactivate processes / triggers and validation rules within the application.</description>
    <label>Process Deactivation</label>
</CustomObject>