framework/default/ortoo-core/default/objects/Process_Deactivation__c/fields/Disable_Processes__c.field-meta.xml
<CustomField>
    <fullName>Disable_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all Processes built in Process Builder.  Assumes that processes look at this property before performing any actions.</description>
    <inlineHelpText>Disable all Processes built in Process Builder.  Assumes that processes look at this property before performing any actions.</inlineHelpText>
    <label>Disable Processes</label>
    <type>Checkbox</type>
</CustomField>