framework/default/ortoo-core/default/objects/Process_Deactivation__c/fields/Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable triggers.</description>
    <inlineHelpText>Disable triggers.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>