framework/default/ortoo-core/default/objects/Process_Deactivation__c/fields/Disable_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable all Validation Rules.  Assumes that validation rules look at this property to determine if they should be enabled.</description>
    <inlineHelpText>Disable all Validation Rules.  Assumes that validation rules look at this property to determine if they should be enabled.</inlineHelpText>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>